# libqrpath

./: .gitignore  CMakeLists.txt  README.md
include/qrpath/: qrpath.h
src/: main.c  qrpath.c
